[Qt][WK2] Plugins are completely broken with a custom device pixel ratio https://bugs.webkit.org/show_bug.cgi?id=98518

Reviewed by Kenneth Rohde Christiansen.

Implement painting with scale factor in ShareableBitmap.
The backing store of the plugin are still overscaled in MiniBrowser
with this patch but this is only the effect of the fake device scale
factor defined in qml (1.5). We should probably remove it on desktop.

* Shared/qt/ShareableBitmapQt.cpp:
(WebKit::ShareableBitmap::paint):

Canonical link: https://commits.webkit.org/116510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130519 268f45cc-cd09-0410-ab3c-d52691b4dbfc